# Unstoppable-Knight-SG

./: .gitignore  CMakeLists.txt  build.sh  main.c
inc/: characters.h  entity.h  functions.h  scenes.h  ui.h
res/: resources.h  resources.res
res/bg/: ui_bg.aseprite
src/: characters.c  entity.c  functions.c  scenes.c  ui.c
src/boot/: rom_head.c
